<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/searchBackgroundView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></View>

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/search"
            android:drawableLeft="@drawable/ic_baseline_menu_24"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/red"
            android:textColorHint="@color/red"
            app:layout_constraintEnd_toStartOf="@+id/imgMicrofon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgMicrofon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_baseline_mic_24"
            app:layout_constraintBottom_toBottomOf="@+id/edtSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtSearch"></ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mainSwipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/mainViewPager"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></androidx.viewpager2.widget.ViewPager2>

                <me.relex.circleindicator.CircleIndicator3
                    android:id="@+id/circleDot"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded"
                    app:layout_constraintBottom_toBottomOf="@+id/mainViewPager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/mainViewPager" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/new_item"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/recyclerProducts"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainViewPager"></TextView>

                <TextView
                    android:id="@+id/txtNewestProductsAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/item_all"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView"></TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerProducts"
                    android:layout_width="0dp"
                    android:layout_height="260dp"
                    android:layoutAnimation="@anim/layout_animation_slide_right"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:listitem="@layout/recycler_item_product"></androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/category"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerProducts"></TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategory"
                    android:layout_width="0dp"
                    android:layoutAnimation="@anim/layout_animation_slide_right"
                    android:layout_height="170dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:listitem="@layout/recycler_item_category">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/txtCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/collections"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerCategory"></TextView>

                <TextView
                    android:id="@+id/txtAllCollections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/item_all"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerCategory"></TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCollection"
                    android:layout_width="0dp"
                    android:layout_height="260dp"
                    android:layout_marginTop="8dp"
                    android:layoutAnimation="@anim/layout_animation_slide_right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtCollection"
                    tools:listitem="@layout/recycler_item_collection"></androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/editor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerCollection"></TextView>

                <TextView
                    android:id="@+id/txtAllEditor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/item_all"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerCollection"></TextView>


                <ImageView
                    android:id="@+id/imgVitrinEditor"
                    android:layout_width="0dp"
                    android:layout_height="400dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"></ImageView>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/pagerVitrinEditor"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imgVitrinEditor"
                    app:layout_constraintEnd_toEndOf="@+id/imgVitrinEditor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imgVitrinEditor"></androidx.viewpager2.widget.ViewPager2>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_vitrin"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgVitrinEditor"></TextView>

                <TextView
                    android:id="@+id/txtAllNewVitrin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/item_all"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgVitrinEditor"></TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerNewVitrin"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layoutAnimation="@anim/layout_animation_slide_right"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtAllNewVitrin"
                    tools:listitem="@layout/recycler_item_new_vitrin"></androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
